Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93739

QT 6.1.0 does not compile with -DQT_NO_EXCEPTIONS=1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 6.1.1, 6.2.0 Alpha
    • 6.1.0
    • Core: Other
    • None
    • Windows
    • 282b724808ea4524ed09b9f0183055fdffc3c38a (qt/qtbase/dev) 9e271fe24cf1dc64bbfd90fcec8564420b3fec9b (qt/qtbase/6.1)

      Tried to compile QT 6.1.0 with MSVC 2019 with the following configuration:
      {{}}
      configure.bat -prefix %MY_INSTALL_PATH% -release -force-debug-info -platform win32-msvc -opengl es2 ^
        -opensource -confirm-license -nomake tests -nomake examples ^
        -skip qtgraphicaleffects -skip qtwebsockets
      {{}}
      and got the following error:
       
      [1052/1801] Building CXX object src\testlib\CMakeFiles\Test.dir\qtestresult.cpp.obj
      FAILED: src/testlib/CMakeFiles/Test.dir/qtestresult.cpp.obj
      C:\PROGRA~2\MICROS~3\2019\COMMUN~1\VC\Tools\MSVC\1428~1.299\bin\Hostx64\x64\cl.exe  /nologo /TP DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_TESTLIB_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_MOC_COMPAT -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_DATASTREAM -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS=1 -DQT_NO_FOREACH -DQT_USE_QSTRINGBUILDER -DTest_EXPORTS -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -D_WINDLL -Isrc\testlib\Test_autogen\include -Iinclude -Iinclude\QtTest -Isrc\testlib -Iinclude\QtTest\6.1.0 -Iinclude\QtTest\6.1.0\QtTest -Iinclude\QtCore -Imkspecs\win32-msvc -Isrc\corelib -Iinclude\QtCore\6.1.0 -Iinclude\QtCore\6.1.0\QtCore /DWIN32 /D_WINDOWS /GR /Zi   /DNDEBUG -O2 -MD /W3 /EHsc -Zc:__cplusplus -permissive -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:externConstexpr -Zc:wchar_t -guard:cf -std:c++17 /YuE:/repos/qt5/qtbase/src/testlib/CMakeFiles/Test.dir/cmake_pch.hxx /FpE:/repos/qt5/qtbase/src/testlib/CMakeFiles/Test.dir/./cmake_pch.cxx.pch /FIE:/repos/qt5/qtbase/src/testlib/CMakeFiles/Test.dir/cmake_pch.hxx /showIncludes /Fosrc\testlib\CMakeFiles\Test.dir\qtestresult.cpp.obj /Fdsrc\testlib\CMakeFiles\Test.dir\ /FS -c src\testlib\qtestresult.cpp
      src\testlib\qtestresult.cpp(77): error C3861: 'qTerminate': identifier not found
      [1055/1801] Linking CXX shared library bin\Qt6DBus.dll
         Creating library lib\Qt6DBus.lib and object lib\Qt6DBus.exp
      [1061/1801] Building CXX object src\gui\CMakeFiles\Gui.dir\cmake_pch.cxx.obj
      ninja: build stopped: subcommand failed.
      {{}}
      probably it's a bug in qtestresult.cpp:77 which uses 'qTerminate' function unconditionally

        For Gerrit Dashboard: QTBUG-93739
        # Subject Branch Project Status CR V

            qtbuildsystem Qt Build System Team
            dmitriano Dmitry Efimov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes