Make qTerminate available when QT_NO_EXCEPTIONS flag is set

It seems that QtCore could only be compiled with exceptions enabled.
Therefore it doesn't make sense to keep conditonal code under
QT_NO_EXCEPTIONS in qglobal.cpp. qTerminate may be called whether
exceptions are enabled or not.

Fixes: QTBUG-93739
Change-Id: Ie49c10f27cfa75360f018e8638603e6a1791450e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 282b724808ea4524ed09b9f0183055fdffc3c38a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>